[lworld] TestLWorld fails with "Meet Not Symmetric" with -Xcomp

XMLWordPrintable

      Executing TestLWorld with -Xcomp fails with:

        41701 1146 b compiler.valhalla.valuetypes.TestLWorld::test25 (294 bytes)
      === Meet Not Symmetric ===
      t = compiler/valhalla/valuetypes/MyInterface:TopPTR *,iid=top (inline_depth=InlineDepthTop)
      this= valuetype[8]:{long, int, int, short, java/lang/Integer, [I, compiler/valhalla/valuetypes/MyValue2, compiler/valhalla/valuetypes/MyValue2}
      mt=(t meet this)= valuetype[8]:{long, int, int, short, java/lang/Integer, [I, compiler/valhalla/valuetypes/MyValue2, compiler/valhalla/valuetypes/MyValue2}
      t_dual= compiler/valhalla/valuetypes/MyInterface *
      this_dual= valuetype[8]:{long, int, int, short, java/lang/Integer, [I, compiler/valhalla/valuetypes/MyValue2, compiler/valhalla/valuetypes/MyValue2}
      mt_dual= valuetype[8]:{long, int, int, short, java/lang/Integer, [I, compiler/valhalla/valuetypes/MyValue2, compiler/valhalla/valuetypes/MyValue2}
      mt_dual meet t_dual= java/lang/Object *
      mt_dual meet this_dual= valuetype[8]:{long, int, int, short, java/lang/Integer, [I, compiler/valhalla/valuetypes/MyValue2, compiler/valhalla/valuetypes/MyValue2}
      # To suppress the following error report, specify this argument
      # after -XX: or in .hotspotrc: SuppressErrorAt=/type.cpp:913
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/oracle/valhallaL/open/src/hotspot/share/opto/type.cpp:913), pid=22167, tid=22178
      # fatal error: meet not symmetric

      Current CompileTask:
      C2: 41074 1146 b compiler.valhalla.valuetypes.TestLWorld::test25 (294 bytes)

      Stack: [0x00007f687817b000,0x00007f687827c000], sp=0x00007f6878274880, free space=998k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x1a3f66c] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x18c
      V [libjvm.so+0x1a405ff] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f
      V [libjvm.so+0xbde7ce] report_fatal(char const*, int, char const*, ...)+0x12e
      V [libjvm.so+0x1980f92] Type::meet_helper(Type const*, bool) const+0x272
      V [libjvm.so+0x1981109] Type::filter_helper(Type const*, bool) const+0x19
      V [libjvm.so+0x93a78d] PhiNode::Value(PhaseGVN*) const+0x1cd
      V [libjvm.so+0x16f715c] PhaseGVN::transform_no_reclaim(Node*)+0x13c
      V [libjvm.so+0x16a593d] Parse::do_exits()+0x29d
      V [libjvm.so+0x16aed12] Parse::Parse(JVMState*, ciMethod*, float)+0xe82
      V [libjvm.so+0x90279c] ParseGenerator::generate(JVMState*)+0x1fc
      V [libjvm.so+0x9035a2] LateInlineCallGenerator::do_late_inline()+0xad2
      V [libjvm.so+0xb2d042] Compile::inline_incrementally_one(PhaseIterGVN&)+0x452
      V [libjvm.so+0xb32d7f] Compile::inline_incrementally(PhaseIterGVN&)+0x13f
      V [libjvm.so+0xb35ea1] Compile::Optimize()+0x3f1
      V [libjvm.so+0xb38070] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0x1320
      V [libjvm.so+0x8ffff2] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x302
      V [libjvm.so+0xb45ae0] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x3c0
      V [libjvm.so+0xb467c9] CompileBroker::compiler_thread_loop()+0x269
      V [libjvm.so+0x195e507] JavaThread::thread_main_inner()+0x287
      V [libjvm.so+0x195e761] JavaThread::run()+0x191
      V [libjvm.so+0x164327a] thread_native_entry(Thread*)+0xfa

            Assignee:
            Roland Westrelin
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: