8207040: [lworld] TestLWorld fails with "Meet Not Symmetric" with -Xcomp

Reviewed-by: thartmann